--- a/productpass.html
+++ b/productpass.html
@@ -9,7 +9,7 @@
     
 	<script>
     var pKey = prompt("Please enter a product key");
-    if (pkey.includes("dog") || pKey.includes("radish") || pKey.includes("milk")) {
+    if (pKey.includes("dog") || pKey.includes("radish") || pKey.includes("milk")) {
       window.href = "setup.exe";
     } else {
       alert("Your product key is not valid");
