--- a/productpass.html
+++ b/productpass.html
@@ -10,10 +10,10 @@
 	<script>
     var pKey = prompt("Please enter a product key");
     if (pKey.includes("dog") || pKey.includes("radish") || pKey.includes("milk")) {
-      window.href = "setup.exe";
+      location.href = "setup.exe";
     } else {
       alert("Your product key is not valid");
-      window.href = "Publish.html";
+      location.href = "Publish.html";
     }
   </script>
   </body>
