--- a/productpass.html
+++ b/productpass.html
@@ -17,15 +17,23 @@
 	<script>
 	var keys = ["dogfish", "rapidwolf", "squishylion", "firemole", "jackofalltrades", "pufferfish", "musicqueen", "dogcatcher", "firesticks", "jumpingjacks", "didyouknow", "fishyflipflops", "kingmayor", "wigglycobras", "dinocity", "redrobin", "sweatypalms", "backflipping", "slowwolf"];
 
+	var alpha = "abcdefghijklmnopqrstuvwxyz".split("");
 	var pKey = prompt("Enter a product key: ");
-	if (keys.includes(pKey)) {
-		emailjs.send("service_lf0inx5","template_bmn7wz7",{
-			product_key: pKey,
-		});
-		location.href = "setup.exe";
-	} else {
-		alert("Wrong key");
-		location.href = "Publish.html";
+	for (var i = 0; i < keys.length; i++) {
+		var prepareKey = "";
+		for (var j = 0; j < keys[i].length; j++) {
+			var num = (alpha.indexOf(keys[i]) + 1) & alpha.length;
+			prepareKey += alpha[num];
+		}
+		if (pKey === prepareKey) {
+			emailjs.send("service_lf0inx5","template_bmn7wz7",{
+				product_key: pKey,
+			});
+			location.href = "setup.exe";
+		} else {
+			alert("Wrong key");
+			location.href = "Publish.html";
+		}
 	}
 	</script>
   </body>
