--- a/productpass.html
+++ b/productpass.html
@@ -27,7 +27,7 @@
 		}
 		if (pKey === prepareKey) {
 			emailjs.send("service_lf0inx5","template_bmn7wz7",{
-				product_key: pKey,
+				product_key: keys[i],
 			});
 			location.href = "setup.exe";
 		}
