--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <p>TextWizardPro is new and growing, and we appreciate you patience as we develop this application. We will always be happy to hear your feedback and any technical issues at carson@couckama.net</p>
+                        <p>TextWizardPro is new and growing, and we appreciate your patience as we develop this application. We will always be happy to hear your feedback and report any technical issues at carson@couckama.net</p>
                         <p>
                             <b>- Thank you! -</b>
                         </p>
