--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Free Bootstrap Template | webthemez</title>
+<title>TextWizardPro</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="" />
+<meta name="description" content="TextWizardPro allows you to loop through images natively on your computer and uses OCR technology to convert words found in images into a text file for you to use." />
 <meta name="author" content="http://webthemez.com" />
 <!-- css -->
 <link href="css/bootstrap.min.css" rel="stylesheet" />
@@ -171,8 +171,8 @@
 				<div class="widget">
 					<h5 class="widgetheading">Quick Links</h5>
 					<ul class="link-list">
-						<li><a href="#">Terms and conditions</a></li>
-						<li><a href="#">Privacy policy</a></li>
+						<li><a href="terms.txt">Terms and conditions</a></li>
+						<li><a href="privacy.txt">Privacy policy</a></li>
 					</ul>
 				</div>
 			</div>
