Important Website Updates

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Free Bootstrap Template | webthemez</title>
+<title>TextWizardPro</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="" />
+<meta name="description" content="TextWizardPro allows you to loop through images natively on your computer and uses OCR technology to convert words found in images into a text file for you to use." />
 <meta name="author" content="http://webthemez.com" />
 <!-- css -->
 <link href="css/bootstrap.min.css" rel="stylesheet" />
@@ -65,7 +65,21 @@
 								</div>
 								<p>TextWizardPro allows you to loop through images natively on your computer and uses OCR technology to convert words found in images into a text file for you to use. It works with almost any image file type, including PDFs. It can save hours of hand by hand translation, without the hassle of uploading photos. What are you waiting for?</p>
                                 <p>Whether it's 4 photos or 400, TextWizardPro can tackle it. Can you imagine having to go through are your photos manually and converting them to text? Or uploading all those photos to a sketchy online service, and then dowloading all of the results? TextWizardPro is not only less chaos, but more privacy and security.</p>
-                            </div>
+								<div class="block-heading-two">
+									<h3><span>Pricing</span></h3>
+								</div>
+								<p>To purchase a product key, contact your vendor today. If you do not have a vendor, contact carson@couckama.net. Using TextWizardPro requires a one time payment of 40 USD. Once you have a product key that is the only payment you are required to make. You get the full benefits and functionality of TextWizard, guarunteed.</p>
+								<div class="block-heading-two">
+									<h3><span>Installation Guide</span></h3>
+								</div>
+								<p>On most computer sytems TextWizardPro is not recognized as a publisher. We are working on that issue right now. But in the mean time, you might get warnings from your computer telling you that it does not recognize the application, and it will ask you if you are sure you want to install it. If you have any concerns about the application, you can check our <a href="terms.txt">Terms and Conditions</a> and our <a href="privacy.txt">Privacy Policy</a>.</a></p>
+								<p>If you encounter any errors during installation, take a screenshot and contact support with the screenshot and a detailed description of the issue. You can expect to hear back in 48 hours. It is a good idea to try install the application before purchasing your product key. That way you can make sure your system is compatable with TextWizardPro before any purchases are made. However if you do purchase a product key and your system is unable to run the application you are guarunteed a refund.</p>
+								<div class="block-heading-two">
+									<h3><span>User Guide</span></h3>
+								</div>
+								<p>Upon a succesful installation, you will be asked where you would like to place your WIZARD TOOLKIT. For accessibilty purposes, we recommend you use desktop. In your toolkit you will find two folders, a pictures folder and a text document folder. Before running the application, place the pictures that you would like read in the pictures folder. After running the application you will find text files with any text from the photos in your text documents folder.</p>
+								<p>To get the best out of TextWizard, make sure your images are clear and easily readable for a human. If your photos are too blury there might be typos in the outcome.</p>
+							</div>
 							<div class="col-md-4">
 								<div class="block-heading-two">
 									<h3><span>Install Today</span></h3>
@@ -143,7 +157,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <p>TextWizardPro is new and growing, and we appreciate you patience as we develop this application. We will always be happy to hear your feedback and any technical issues at carson@couckama.net</p>
+                        <p>TextWizardPro is new and growing, and we appreciate your patience as we develop this application. We will always be happy to hear feedback and any technical issues at carson@couckama.net</p>
                         <p>
                             <b>- Thank you! -</b>
                         </p>
@@ -171,8 +185,8 @@
 				<div class="widget">
 					<h5 class="widgetheading">Quick Links</h5>
 					<ul class="link-list">
-						<li><a href="#">Terms and conditions</a></li>
-						<li><a href="#">Privacy policy</a></li>
+						<li><a href="terms.txt">Terms and conditions</a></li>
+						<li><a href="privacy.txt">Privacy policy</a></li>
 					</ul>
 				</div>
 			</div>
