--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 					<address>
 					<strong>TextWizardPro</strong><br>
 					<p>
-						<i class="icon-phone"></i> (208) 442-8578<br>
+						<i class="icon-phone"></i><br>
 						<i class="icon-envelope-alt"></i> carson@couckama.net
 					</p>
 				</div>
